objects/Contributor__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <formula>If( Stage_Work_Element__r.Include__c = TRUE , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>Role__r.Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Process Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Contributors</relationshipLabel>
        <relationshipName>Contributors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Work_Element_Name__c</fullName>
        <formula>Stage_Work_Element__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Element Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Work_Element__c</fullName>
        <label>Work Element Id</label>
        <referenceTo>Stage_Work_Element__c</referenceTo>
        <relationshipLabel>Contributors</relationshipLabel>
        <relationshipName>Contributors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Member_Name__c</fullName>
        <formula>Team_Members__r.User__r.FirstName &amp;&quot; &quot;&amp;Team_Members__r.User__r.LastName</formula>
        <label>Team Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Members__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Members</label>
        <referenceTo>Core_Team_Member__c</referenceTo>
        <relationshipName>Contributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contributor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Contributor-{0000000000}</displayFormat>
        <label>Contributor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contributors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>